--- a/2dAnimation/templates/form.html
+++ b/2dAnimation/templates/form.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div class="container mt-2 col-5">
-    <h1 class="mb-3">Submit Your Values</h1>
+    <h1 class="mb-3">Welcome to Game analyzer</h1>
+    <h3> Enter the Game Name, positions or jersey number to begin game analysis</h3>
     <form method="POST" action="/submit">
       <div class="form-group">
         <label for="gameplay">Gameplay:</label>
