--- a/2dAnimation/templates/result.html
+++ b/2dAnimation/templates/result.html
@@ -14,12 +14,12 @@
           <p class="card-text">{{ gameplay }}</p>
         </div>
       </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">File</h5>
-          <p class="card-text">{{ file_url }}</p>
-        </div>
-      </div>
+<!--      <div class="card">-->
+<!--        <div class="card-body">-->
+<!--          <h5 class="card-title">File</h5>-->
+<!--          <p class="card-text">{{ file_url }}</p>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Position</h5>
